--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         <p>You can visit my <a href='https://github.com/haruute0' target='_blank' rel='noopener noreferrer'>GitHub</a>, <a href='https://keybase.io/vriyas' target='_blank' rel='noopener noreferrer'>Keybase</a> or drop an <a href='mailto:vriyashartama@gmail.com' target='_blank' rel='noopener noreferrer'>Email</a>.
         </p><p>Others:</p>
         <p><a href='https://gitlab.com/haruute0' target='_blank' rel='noopener noreferrer'>GitLab</a></p>
+        <p><a href='https://bitbucket.org/haruute0' target='_blank' rel='noopener noreferrer'>BitBucket</a></p>
         <p><a href='https://last.fm/user/hartamaputra' target='_blank' rel='noopener noreferrer'>Last.fm</a></p>
         <p><a href='https://twitter.com/vriyas29' target='_blank' rel='noopener noreferrer'>Twitter</a></p>
         <p><a href='https://medium.com/@haruute' target='_blank' rel='noopener noreferrer'>Medium</a><p>
         <p><a href='https://facebook.com/vriyas29' target='_blank' rel='noopener noreferrer'>Facebook</a></p>
         <p><a href='https://instagram.com/hartamaputra' target='_blank' rel='noopener noreferrer'>Instagram</a></p>
+        <p><a href='https://linkedin.com/in/vriyas-hartama/' target='_blank' rel='noopener noreferrer'>LinkedIn</a></p>
     </body>
 </html>
