--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
         <p><a href='https://facebook.com/vriyas29' target='_blank' rel='noopener noreferrer'>Facebook</a></p>
         <p><a href='https://instagram.com/hartamaputra' target='_blank' rel='noopener noreferrer'>Instagram</a></p>
         <p><a href='https://linkedin.com/in/vriyas-hartama/' target='_blank' rel='noopener noreferrer'>LinkedIn</a></p>
+        <p><a href='https://plus.google.com/u/0/118044288081407794263' target='_blank' rel='noopener noreferrer'>Google+</a></p>
     </body>
 </html>
